# ChangeLog for net-analyzer/trafshow
# Copyright 2002-2004 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-analyzer/trafshow/ChangeLog,v 1.6 2004/06/24 22:22:56 agriffis Exp $

  06 Dec 2002; Rodney Rees <manson@gentoo.org> : changed sparc ~sparc keywords
 
*trafshow-3.1-r1 (06 Jul 2002)

	06 Jul 2002; Aron Griffis <agriffis@gentoo.org> trafshow-3.1-r1.ebuild:

	Now honor setting of USE=slang to close bug #3411

*trafshow-3.1 (19 Feb 2002)

	19 Feb 2002; Aron Griffis <agriffis@gentoo.org> trafshow-3.1.ebuild, files/trafshow-3.1-gentoo.patch:

	Added ebuild for trafshow, along with patch to install cleanly into
	sandbox.