@@ -1,6 +1,10 @@
 # ChangeLog for net-analyzer/trafshow
 # Copyright 2002-2004 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-analyzer/trafshow/ChangeLog,v 1.6 2004/06/24 22:22:56 agriffis Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-analyzer/trafshow/ChangeLog,v 1.7 2004/07/11 10:43:07 eldad Exp $
+
+  11 Jul 2004; Eldad Zack <eldad@gentoo.org> +metadata.xml,
+  trafshow-3.1-r1.ebuild:
+  Updated to use epatch, Tidy
 
   06 Dec 2002; Rodney Rees <manson@gentoo.org> : changed sparc ~sparc keywords
  
